# app/Http/Controllers/API/AuthController.php
@@ -5,13 +5,15 @@ namespace App\Http\Controllers\API;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\AuthRequest;
 use App\Http\Requests\LoginRequest;
+use App\Http\Requests\ResetPasswordRequest;
+use App\Notifications\ResetPasswordRequest as ResetPasswordNotification;
+use App\Services\AuthService;
 use App\Services\UserService;
 use App\Traits\APIResponse;
-use Illuminate\Support\Facades\Auth;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Str;
-use App\Services\AuthService;
-use App\Notifications\ResetPasswordRequest;
 
 class AuthController extends Controller
 {
@@ -68,9 +70,9 @@ class AuthController extends Controller
      * )
      */
     use APIResponse;
-  
 
     protected AuthService $authService;
+
     protected UserService $userService;
 
     /**
@@ -78,7 +80,7 @@ class AuthController extends Controller
      *
      * @param UserService $exampleService
      */
-    public function __construct(UserService $userService,AuthService $authService)
+    public function __construct(UserService $userService, AuthService $authService)
     {
         $this->userService = $userService;
         $this->authService = $authService;
@@ -95,7 +97,7 @@ class AuthController extends Controller
         exit;
         $success['name'] = $user->name;
 
-        return response()->json(
+        return response(
             [
                 'success' => $success,
             ],
@@ -166,48 +168,155 @@ class AuthController extends Controller
         }
     }
 
-
+    /**
+     * @OA\Post(
+     *     path="/api/forgot-password",
+     *     operationId="forgotPassword",
+     *     tags={"Authentication"},
+     *     summary="Forgot password",
+     *     description="Forgot password.",
+     *
+     *     @OA\RequestBody(
+     *
+     *          @OA\JsonContent(),
+     *         required=true,
+     *
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"email"},
+     *
+     *               @OA\Property(property="email", type="email"),
+     *            ),
+     *        ),
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="We have e-mailed your password reset link!",
+     *
+     *          @OA\JsonContent()
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=400,
+     *         description="No email found",
+     *
+     *          @OA\JsonContent()
+     *     )
+     * )
+     */
     public function sendMail(Request $request)
     {
         $email = $request->email;
-        $findEmail = $this->userService->findUserByEmail( $email);
+        $findEmail = $this->userService->findUserByEmail($email);
         $token = Str::random(64);
         if ($findEmail) {
             $this->authService->createPasswordResset([
                 'email' => $email,
                 'token' => $token,
             ]);
-          
-            $findEmail->notify(new ResetPasswordRequest($token));
-            return response()->json([
-                'message' => 'We have e-mailed your password reset link!'
-                ]);
-        } 
+
+            $findEmail->notify(new ResetPasswordNotification($token));
+
+            return response([
+                'message' => 'We have e-mailed your password reset link!',
+            ]);
+        } else {
+            return response([
+                'success' => false,
+                'message' => 'No email found',
+            ], 400);
+        }
     }
 
-    public function reset(Request $request, $token)
+    /**
+     * @OA\Post(
+     *     path="/api/reset-password/{token}",
+     *     operationId="resetPassword",
+     *     tags={"Authentication"},
+     *     summary="Reset password",
+     *     description="Reset password.",
+     *
+     *      @OA\Parameter(
+     *         name="token",
+     *         in="path",
+     *         required=true,
+     *         description="token to reset password",
+     *
+     *         @OA\Schema(type="string"),
+     *     ),
+     *
+     *     @OA\RequestBody(
+     *
+     *          @OA\JsonContent(),
+     *         required=true,
+     *
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"password","password_confirmation"},
+     *
+     *               @OA\Property(property="password", type="password"),
+     *               @OA\Property(property="password_confirmation", type="password"),
+     *            ),
+     *        ),
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="password has been successfully reset",
+     *
+     *          @OA\JsonContent()
+     *     ),
+     *
+     *      @OA\Response(
+     *         response=422,
+     *         description="This password reset token is expire",
+     *
+     *          @OA\JsonContent()
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=400,
+     *         description="This password reset token is invalid.",
+     *
+     *          @OA\JsonContent()
+     *     )
+     * )
+     */
+    public function reset(ResetPasswordRequest $request, $token)
     {
-        $verifyPassword = $this->authService->findResetPassword(['token' => $token]);
-        if (!$verifyPassword) {
-            return response()->json([
-              'message' => 'This password reset token is invalid.'
-                ]);
-        }else{
-            $id = $this->userService->findUserByEmail($verifyPassword->email)->id;
-            $timeDifference = now()->diffInMinutes($verifyPassword->updated_at);
+        $findEmail = $this->authService->findResetPassword(['token' => $token]);
+
+        if (isset($findEmail)) {
+            $id = $this->userService->findUserByEmail($findEmail->email)->id;
+
+            $timeDifference = now()->diffInMinutes($findEmail->updated_at);
             if ($timeDifference > 5) {
-                //nhớ xoá token
-                return response()->json([
-                    'message' => 'This password reset token is expire'
-                      ]);
-            } 
-            else {
+                $findEmail->delete();
+
                 return response([
-                    'code' => $token,
-                    'message' => trans('passwords.code_is_valid')
+                    'message' => 'This password reset token is expire',
+                ], 422);
+            } else {
+                // update new password
+                $data['password'] = Hash::make($request->password);
+                $this->userService->updateUser($id, $data);
+                $findEmail->delete();
+
+                return response([
+                    'message' => 'password has been successfully reset',
                 ], 200);
             }
-
+        } else {
+            return response([
+                'message' => 'This password reset token is invalid.',
+            ], 400);
         }
     }
 }
